[project]
name = "projecct3"
version = "0.1.0"
description = "Image Classification with MobileNetV2"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.3.0",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=11.0.0",
    "streamlit>=1.58.0",
    "tensorflow>=2.21.0",
]